Fixed project image layout on mobile version

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ section {
 
 .projectItem {
     display: flex;
+    flex-direction: column;
     align-items: stretch;
     gap: 14px;
 }
@@ -174,11 +175,9 @@ section {
 }
 
 .projectItem > div:last-child {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-self: center;
     aspect-ratio: 9/16;
-    max-width: 30%;
+    max-width: 50%;
     overflow: hidden;
 }
 
@@ -251,6 +250,14 @@ ul li span {
 
     .statsContainer {
         flex-direction: row;
+    }
+
+    .projectItem {
+        flex-direction: row;
+    }
+
+    .projectItem > div:last-child {
+        max-width: 30%;
     }
 
     .projectItem > div:last-child img {
